[package]
name = "eosio"
version = "0.1.0"
authors = ["Fan Yang <fanyang.coder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
rustc-serialize = "0.3"
log = "0.4"
parity-codec = "3.2"

primitives = { package = "substrate-primitives", path = "../../core/primitives" }