[package]
name = "eosio"
version = "0.1.0"
authors = ["Fan Yang <fanyang.coder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
rustc-serialize = "0.3"
log = { version = "0.4", optional = true }
parity-codec = "3.2"
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
primitives = { package = "substrate-primitives", path = "../../core/primitives" }
serde = { version = "1.0",  features = ["derive"] }